# pruning_deep_nets

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: MNIST_pruning_results.ipynb
src/: inference_pipeline.py  models.py  test_models.py  training_pipeline.py
src/basic_utils/: constants.py
src/train_inference_utils/: evaluator.py  loaders.py  models.py  prunings.py  test_models.py  test_prunings.py
